--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/plus-jakarta-sans": "5.0.20",
     "@fontsource/roboto-mono": "5.0.18",
     "@hookform/resolvers": "3.6.0",
+    "@mui/icons-material": "^6.1.6",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.20",
     "@mui/system": "5.15.20",
@@ -31,6 +32,7 @@
     "@mui/x-date-pickers": "7.7.1",
     "@phosphor-icons/react": "2.1.6",
     "apexcharts": "3.49.2",
+    "axios": "^1.7.7",
     "dayjs": "1.11.11",
     "next": "14.2.4",
     "react": "18.3.1",
